<resources>
    <string name="app_name">InventoryApp</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="list_item_label_price">Price: </string>
    <string name="list_item_label_supplier">Supplier: </string>
    <string name="list_item_label_quantity">Quantity: </string>

    <!-- Text hints for fields in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Current Quantity</string>
    <string name="hint_product_supplier">Supplier</string>
    <string name="hint_product_supplier_email">Supplier email</string>

    <!-- Labels for fields in the editor [CHAR LIMIT=30] -->
    <string name="editor_label_name">Name</string>
    <string name="editor_label_price">Price</string>
    <string name="editor_label_quantity">Quantity</string>
    <string name="editor_label_supplier">Supplier</string>
    <string name="editor_label_image">Image</string>
    <string name="editor_label_order_more">Order more</string>
    <string name="editor_label_supplier_email">Supplier email</string>

    <!-- Text for "Add Image" button in the editor -->
    <string name="editor_add_image_btn">Add Image</string>
    <string name="editor_change_image_btn">Change Image</string>

    <!-- Content Description for ImageView in the editor -->
    <string name="editor_image_view_description">Product Image</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="quantity_decrement_toast">Quantity cannot be less than 0</string>

    <!-- Order subject and order text for Contact supplier option -->
    <string name="order_more_subject_text">Order. </string>
    <string name="order_more_order_text">I need 10 more pieces of this product. Thanks!</string>

    <!-- Sale button text and connected Toast messages-->
    <string name="sale_button">Sale</string>
    <string name="sale_button_item_sold">1 item is sold!</string>
    <string name="sale_button_item_out_of_stock">This product is out of stock</string>

    <!-- Text for "Contact supplier" button-->
    <string name="contact_supplier_button">Contact Supplier</string>

    <!-- Quantity related buttons and default value-->
    <string name="decrease_button">-</string>
    <string name="increase_button">+</string>
    <string name="default_quantity">0</string>
</resources>
