<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.xella.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/editor_label_name" />

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/editor_label_price" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/editor_label_quantity" />

        <EditText
            android:id="@+id/edit_product_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_quantity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/editor_label_supplier" />

        <EditText
            android:id="@+id/edit_product_supplier"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/editor_label_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/edit_product_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/editor_image_view_description"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/edit_product_add_image_btn"
                style="@style/EditorAddImageBtnStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor_add_image_btn" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
